--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eruma❤️</title>
+    <title>Eruma🫂</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
             <p class="intro-text">Valentine’s Day celebrate panna lover illa..nee tha irukka<br>small surprise</p>
             <a href="surprise.html" class="reveal-btn">Otakka</a>
         </div>
-        
+
     </main>
 </body>
 
