--- a/surprise.html
+++ b/surprise.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eruma❤️</title>
+    <title>Eruma🫂</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
 </head>
@@ -22,7 +22,7 @@
             </div>
 
             <div class="text-reveal">
-                <h2 class="surprise-text">Hpy Friendship <br> Valentine’s Day Eruma❤️</h2>
+                <h2 class="surprise-text">Hpy Friendship <br> Valentine’s Day Eruma🐃</h2>
             </div>
 
             <a href="index.html" class="back-link">←Na irukka</a>
