--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eruma🫂</title>
+    <title>Eruma</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
 </head>
@@ -12,11 +12,11 @@
 <body>
     <main class="card-container">
         <div class="content">
-            <p class="intro-text">Valentine’s Day celebrate panna lover illa..nee tha irukka<br>small surprise</p>
-            <a href="surprise.html" class="reveal-btn">Otakka</a>
+            <p class="intro-text">Valentine’s Day celebrate panna lover illa..Nee tha irukka<br>oru small surprise</p>
+            <a href="surprise.html" class="reveal-btn">Otakka🫂</a>
         </div>
-
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
