--- a/surprise.html
+++ b/surprise.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eruma🫂</title>
+    <title>Eruma</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
 </head>
@@ -14,10 +14,10 @@
         <div class="surprise-content">
             <div class="photo-gallery">
                 <div class="photo-card" style="--rotation: -5deg; --delay: 0.3s;">
-                    <img src="img/1.jpeg" alt="Friendship 1">
+                    <img src="img/2.jpeg" alt="Friendship Photo 1">
                 </div>
                 <div class="photo-card" style="--rotation: 5deg; --delay: 0.5s;">
-                    <img src="img/3.jpeg" alt="Friendship 2">
+                    <img src="img/3.jpeg" alt="Friendship Photo 2">
                 </div>
             </div>
 
@@ -25,9 +25,10 @@
                 <h2 class="surprise-text">Hpy Friendship <br> Valentine’s Day Eruma🐃</h2>
             </div>
 
-            <a href="index.html" class="back-link">←Na irukka</a>
+            <a href="index.html" class="back-link">← Don't Feel Na irukka</a>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
