--- a/surprise.html
+++ b/surprise.html
@@ -13,11 +13,14 @@
     <main class="card-container">
         <div class="surprise-content">
             <div class="photo-gallery">
-                <div class="photo-card" style="--rotation: -5deg; --delay: 0.3s;">
+                <div class="photo-card" style="--rotation: -5deg; --delay: 0.2s;">
                     <img src="img/1.jpeg" alt="Friendship Photo 1">
                 </div>
-                <div class="photo-card" style="--rotation: 5deg; --delay: 0.5s;">
+                <div class="photo-card" style="--rotation: 3deg; --delay: 0.4s;">
                     <img src="img/3.jpeg" alt="Friendship Photo 2">
+                </div>
+                <div class="photo-card" style="--rotation: -2deg; --delay: 0.6s;">
+                    <img src="img/2.jpeg" alt="Friendship Photo 3">
                 </div>
             </div>
 
